--- a/playground_title-sequence.html
+++ b/playground_title-sequence.html
@@ -38,7 +38,7 @@ In opdracht van: HAN<br><br><br><br>
 			</div>
 				<div class="grafische-opdrachten-preview-link">
 <a href="https://vimeo.com/128744131" target="_blank">
-	<img src="images/mw_titlesequence.jpg" alt="title-sequence" class="dtc">
+	<img src="images/mw_titlesequence.jpg" alt="title-sequence" class="Title sequence go to">
 		</a>
 		</div>
 	
@@ -53,14 +53,14 @@ In opdracht van: HAN<br><br><br><br>
 				<ul class="grafische-opdrachten">
 					<li>
 						<a href="mijn-werk.html#playground">
-						<img src="images/mijn-werk-preview.jpg" alt="mijn werk">
+						<img src="images/mijn-werk-preview.jpg" alt="Mijn werk">
 						<p class="portfolio-titles">Mijn werk</p>
 						</a>
 					</li>
 
 					<li>
 						<a href="playground_awwa.html">
-							<img src="images/mw_awwa.jpg" alt="awwa">
+							<img src="images/mw_awwa.jpg" alt="A World Without AIDS">
 							<p class="portfolio-titles">A World Without AIDS</p>
 						</a>
 					</li>
